--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
 <body>
     <nav class="navbar">
-        <div class="navbar_container">
+        <div class="navbar__container">
             <a href="/" id="navbar__logo">NEXT</a>
-            <div class="navbar__toggle" id="moblile-menue">
+            <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
+
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
