--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Next Website</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/6770827615.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
+    <!--Navbar-->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">NEXT</a>
+            <a href="/" id="navbar__logo"><i class="fa-solid fa-gem"></i>NEXT</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -43,6 +46,41 @@
             </ul>
         </div>
     </nav>
+    <!--Hero section-->
+
+    <div class="main">
+        <div class="main__container">
+            <div class="main__content">
+                <h1>NEXT GENERATION</h1>
+                <h2>TECHONOLGY</h2>
+                <P>See what makes us different.</P>
+                <button class="main__btn">
+                    <a href="/">Get Started</a>
+                </button>
+            </div>
+            <div class="main__img--container">
+                <img src="images/pic1.svg" alt="pic" id="main__img">
+            </div>
+        </div>
+    </div>
+
+    <!--Services Section-->
+    <div class="services">
+        <h1>See what the hype is about</h1>
+        <div class="services__container">
+            <div class="services__card">
+                <h2>Experience Bliss</h2>
+                <p>AI Powered Technology</p>
+                <button>Get Started</button>
+            </div>
+            <div class="services__card">
+                <h2>Are you Ready?</h2>
+                <p>Take the leap</p>
+                <button>Get Started</button>
+            </div>
+        </div>
+
+    </div>
     <script src="app.js"></script>
 </body>
 
