--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Navbar-->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo"><i class="fa-solid fa-gem"></i>NEXT</a>
+            <a href="#" id="navbar__logo"><i class="fa-solid fa-gem"></i>NEXT</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -24,22 +24,22 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">
+                    <a href="#" class="navbar__links">
                         Home
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="./tech.html" class="navbar__links">
+                    <a href="#" class="navbar__links">
                         Tech
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">
+                    <a href="#" class="navbar__links">
                         Products
                     </a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/" class="button">
+                    <a href="#" class="button">
                         Sign Up
                     </a>
                 </li>
@@ -55,7 +55,7 @@
                 <h2>TECHONOLGY</h2>
                 <P>See what makes us different.</P>
                 <button class="main__btn">
-                    <a href="/">Get Started</a>
+                    <a href="#">Get Started</a>
                 </button>
             </div>
             <div class="main__img--container">
@@ -87,18 +87,18 @@
             <div class="footer__links--wrapper">
                 <div class="footer__links--items">
                     <h2>About Us</h2>
-                    <a href="/">How it works</a>
-                    <a href="/">Testimonals</a>
-                    <a href="/">Careers</a>
-                    <a href="/">Investments</a>
-                    <a href="/">Terms of Service</a>
+                    <a href="#">How it works</a>
+                    <a href="#">Testimonals</a>
+                    <a href="#">Careers</a>
+                    <a href="#">Investments</a>
+                    <a href="#">Terms of Service</a>
                 </div>
                 <div class="footer__links--items">
                     <h2>Contact Us</h2>
-                    <a href="/">Contact</a>
-                    <a href="/">Support</a>
-                    <a href="/">Destinations</a>
-                    <a href="/">Spnsorships</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Support</a>
+                    <a href="#">Destinations</a>
+                    <a href="#">Spnsorships</a>
 
                 </div>
             </div>
@@ -106,18 +106,18 @@
             <div class="footer__links--wrapper">
                 <div class="footer__links--items">
                     <h2>videos</h2>
-                    <a href="/">Submit Video</a>
-                    <a href="/">Ambassadors</a>
-                    <a href="/">Agency</a>
-                    <a href="/">Influencer</a>
+                    <a href="#">Submit Video</a>
+                    <a href="#">Ambassadors</a>
+                    <a href="#">Agency</a>
+                    <a href="#">Influencer</a>
 
                 </div>
                 <div class="footer__links--items">
                     <h2>Social Media</h2>
-                    <a href="/">Instagram</a>
-                    <a href="/">Facebook</a>
-                    <a href="/">Youtube</a>
-                    <a href="/">Twitter</a>
+                    <a href="#">Instagram</a>
+                    <a href="#">Facebook</a>
+                    <a href="#">Youtube</a>
+                    <a href="#">Twitter</a>
                 </div>
             </div>
         </div>
@@ -125,25 +125,25 @@
         <div class="social__media">
             <div class="social__media--wrap">
                 <div class="footer__logo">
-                    <a href="/" id="footer__logo"><i class="fa-solid fa-gem"></i>NEXT</a>
+                    <a href="#" id="footer__logo"><i class="fa-solid fa-gem"></i>NEXT</a>
                 </div>
                 <p class="website__rights">
                     c Next 2020. All rights reserved
                 </p>
                 <div class="social__icons">
-                    <a href="/" class="social__icon--link" target="_blank">
+                    <a href="#" class="social__icon--link" target="_blank">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
-                    <a href="/" class="social__icon--link" target="_blank">
+                    <a href="#" class="social__icon--link" target="_blank">
                         <i class="fa-brands fa-square-instagram"></i>
                     </a>
-                    <a href="/" class="social__icon--link" target="_blank">
+                    <a href="#" class="social__icon--link" target="_blank">
                         <i class="fa-brands fa-twitter"></i>
                     </a>
-                    <a href="/" class="social__icon--link" target="_blank">
+                    <a href="#" class="social__icon--link" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
-                    <a href="/" class="social__icon--link" target="_blank">
+                    <a href="#" class="social__icon--link" target="_blank">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
                 </div>
